idf_component_register(SRCS "rotary_encoder.c"
                            "bt_app_av.c"
                            "bt_app_core.c"
                            "OLEDDisplay.c"
                            "OLEDDisplayFonts.c"
                            "main.c"
                    INCLUDE_DIRS ".")
